MB-5425 Fix Mc-engine synchronous wait interface with mccouch

Mc-engine synchronous wait was incorrect because it might never
receive the response to its request if connection is reset. In
fact, either couch-kvstore might abort or mc-engine might get
stuck forever. Instead, mc-engine must resend requests after
reset connection if it must wait for a response.

Change-Id: If143b84ce1b94568414b5ffda1fd12e9727d70b5
Reviewed-on: http://review.couchbase.org/16648
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Jin Lim <jin@couchbase.com>
Reviewed-by: Jin Lim <jin@couchbase.com>